--- a/discountsell/src/main/res/layout/fragment_four.xml
+++ b/discountsell/src/main/res/layout/fragment_four.xml
@@ -1,13 +1,33 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="androidas.com.discountsell.fragment.FourFragment">
+    tools:context="androidas.com.discountsell.fragment.FourFragment"
+    android:orientation="vertical"
+    >
+        <RelativeLayout
+            android:gravity="center"
+            android:background="#ff0000"
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+                <TextView
+                    android:gravity="center"
+                    android:textSize="25sp"
+                    android:textColor="#fff"
+                    android:text="品牌特卖"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                     />
+        </RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_fragment_four"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:scrollbarStyle="outsideInset"
+            android:scrollbarSize="4dp"
+            android:scrollbarThumbVertical="@color/colorRed"
+            />
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+</LinearLayout>
