--- a/discountsell/src/main/res/layout/blank1_fragment_item.xml
+++ b/discountsell/src/main/res/layout/blank1_fragment_item.xml
@@ -4,25 +4,24 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 <RelativeLayout
-    android:layout_marginRight="5dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginBottom="5dp"
+
 android:background="#ffffff"
-    android:layout_width="320dp"
-    android:layout_height="390dp"
-    android:layout_weight="0.08">
+    android:layout_width="wrap_content"
+android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_height="325dp"
+    >
     <ImageView
         android:src="@drawable/icon_new"
         android:layout_marginRight="5dp"
         android:layout_width="wrap_content"
-        android:layout_height="2dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"/>
 <ImageView
     android:id="@+id/blak1_fragment_imageview"
     android:layout_width="match_parent"
-    android:layout_height="320dp"
+    android:layout_height="230dp"
     android:scaleType="centerCrop"/>
     <TextView
         android:layout_alignParentLeft="true"
@@ -69,35 +68,52 @@ android:background="#ffffff"
     <TextView
 
         android:layout_marginLeft="5dp"
-        android:layout_alignBottom="@+id/blank1_fragment_price_textview"
-        android:textSize="15dp"
+       android:layout_alignBottom="@+id/blank1_fragment_price_textview"
         android:layout_toRightOf="@+id/blank1_fragment_price_textview"
         android:id="@+id/small_price_textview"
         android:layout_width="wrap_content"
-        android:layout_height="15dp"
+        android:layout_height="wrap_content"
         android:textColor="#b0b0b0"
         android:textStyle="bold"
+        android:textSize="10dp"
         android:text="¥"/>
     <TextView
 
 android:textStyle="bold"
         android:layout_marginLeft="5dp"
         android:layout_alignBottom="@+id/blank1_fragment_price_textview"
-        android:textSize="15dp"
+        android:textSize="10dp"
         android:layout_toRightOf="@+id/small_price_textview"
         android:id="@+id/small_price_line_textview"
         android:layout_width="wrap_content"
-        android:layout_height="15dp"
+        android:layout_height="wrap_content"
         android:textColor="#b0b0b0"
+
         android:text="19"/>
+    <RelativeLayout
+        android:visibility="invisible"
+        android:id="@+id/paixia_relativelayout"
+        android:background="#26d59d"
+        android:layout_marginLeft="5dp"
+        android:layout_alignBottom="@+id/blank1_fragment_price_textview"
+        android:layout_toRightOf="@+id/blank1_fragment_price_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+android:textSize="13dp"
+            android:textColor="#ffffff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="拍下改价"/>
+    </RelativeLayout>
     <View
 
         android:layout_marginLeft="5dp"
         android:layout_alignBottom="@+id/blank1_fragment_price_textview"
-android:layout_marginBottom="5dp"
+android:layout_marginBottom="7dp"
         android:layout_toRightOf="@+id/blank1_fragment_price_textview"
         android:id="@+id/small_price_line"
-        android:layout_width="31dp"
+        android:layout_width="23dp"
         android:layout_height="1dp"
        android:background="#9d9d9d"
         />
@@ -147,46 +163,49 @@ android:layout_toLeftOf="@+id/blank1_fragment_tianmao_taobao_textview"
     android:layout_toRightOf="@+id/hongbao_imageview"
         android:id="@+id/imageView" />
     <RelativeLayout
-        android:layout_width="70dp"
+        android:id="@+id/color_relativelayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/imageView"
         android:layout_alignTop="@+id/imageView"
         android:layout_alignLeft="@+id/imageView"
         android:layout_marginLeft="2dp"
         android:background="#ff7612"
-      ></RelativeLayout>
-<TextView
-    android:id="@+id/provide_textview"
-    android:layout_marginLeft="6dp"
-    android:textColor="#ffffff"
-    android:text="送"
-    android:textSize="12dp"
-    android:layout_alignBottom="@+id/hongbao_imageview"
-    android:layout_toRightOf="@+id/hongbao_imageview"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
-    <TextView
-
-        android:id="@+id/provide_math_textview"
-        android:layout_marginLeft="1dp"
+      ><TextView
+        android:layout_centerVertical="true"
+        android:id="@+id/provide_textview"
+        android:layout_marginLeft="2dp"
         android:textColor="#ffffff"
-        android:text="10"
+        android:text="送"
         android:textSize="12dp"
-        android:layout_alignBottom="@+id/hongbao_imageview"
-        android:layout_toRightOf="@+id/provide_textview"
+android:layout_alignParentLeft="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <TextView
+        <TextView
+            android:layout_centerVertical="true"
 
-        android:id="@+id/provide_jifen"
-        android:layout_marginLeft="1dp"
-        android:textColor="#ffffff"
-        android:text="集分宝"
-        android:textSize="12dp"
-        android:layout_alignBottom="@+id/hongbao_imageview"
-        android:layout_toRightOf="@+id/provide_math_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+            android:id="@+id/provide_math_textview"
+            android:layout_marginLeft="1dp"
+            android:textColor="#ffffff"
+            android:text="10"
+            android:textSize="12dp"
+
+            android:layout_toRightOf="@+id/provide_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_centerVertical="true"
+
+            android:id="@+id/provide_jifen"
+            android:layout_marginLeft="1dp"
+            android:textColor="#ffffff"
+            android:text="集分宝"
+            android:textSize="12dp"
+
+            android:layout_toRightOf="@+id/provide_math_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" /></RelativeLayout>
+
     <TextView
 
         android:id="@+id/provide_extra_hongbao"
@@ -196,7 +215,7 @@ android:layout_toLeftOf="@+id/blank1_fragment_tianmao_taobao_textview"
         android:textSize="12dp"
 android:textStyle="bold"
         android:layout_alignBottom="@+id/hongbao_imageview"
-        android:layout_toRightOf="@+id/provide_jifen"
+        android:layout_toRightOf="@+id/color_relativelayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </RelativeLayout>
