--- a/discountsell/src/main/res/layout/wellchosen_header_view.xml
+++ b/discountsell/src/main/res/layout/wellchosen_header_view.xml
@@ -2,12 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-<LinearLayout
-    android:id="@+id/first_fragment_header_ll"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:orientation="vertical"
-    android:layout_weight="3">
+
     <com.bigkoo.convenientbanner.ConvenientBanner
         android:id="@+id/header_view_cb"
         android:layout_width="match_parent"
@@ -16,18 +11,40 @@
 
     <GridView
 
+android:layout_marginBottom="1dp"
         android:numColumns="4"
         android:id="@+id/header_view_gv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"/>
-    <HorizontalScrollView
-        android:scrollbars="none"
-        android:id="@+id/header_view_rv"
+    <RelativeLayout
+        android:background="#ffffff"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></HorizontalScrollView>
-</LinearLayout>
+        android:layout_weight="1">
+        <ImageView
+            android:id="@+id/hotword_imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/hotword"/>
+        <HorizontalScrollView
+            android:layout_toRightOf="@+id/hotword_imageview"
+            android:scrollbars="none"
+            android:id="@+id/header_view_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">  <LinearLayout
+            android:id="@+id/id_gallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal" >
+        </LinearLayout>  </HorizontalScrollView>
+
+
+    </RelativeLayout>
+
+
 
 
 </LinearLayout>
