--- a/discountsell/src/main/res/layout/activity_details.xml
+++ b/discountsell/src/main/res/layout/activity_details.xml
@@ -2,9 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <RelativeLayout
+        android:background="#ff0000"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        <ImageView
+            android:src="@drawable/back2"
+            android:id="@+id/iv_four_details_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:textSize="23sp"
+            android:textColor="#fff"
+            android:text="宝贝详情"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
     <WebView
         android:id="@+id/wv_product_detail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="跳转成功"/>
+        android:layout_height="match_parent" />
 </LinearLayout>
