--- a/discountsell/src/main/res/layout/four_click_grid_vp.xml
+++ b/discountsell/src/main/res/layout/four_click_grid_vp.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <GridView
+    <com.handmark.pulltorefresh.library.PullToRefreshGridView
         android:layout_margin="10dp"
         android:id="@+id/gv_four_grid_vp"
         android:numColumns="2"
@@ -11,5 +11,5 @@
         android:scrollbarSize="2dp"
         android:scrollbarThumbVertical="@color/colorRed"
         android:scrollbarStyle="outsideOverlay">
-    </GridView>
+    </com.handmark.pulltorefresh.library.PullToRefreshGridView>
 </LinearLayout>
