--- a/discountsell/src/main/res/layout/four_click_activity.xml
+++ b/discountsell/src/main/res/layout/four_click_activity.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp">
         <ImageView
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/back2"
             android:id="@+id/iv_four_click_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -22,13 +22,13 @@
             android:layout_centerHorizontal="true"
             android:id="@+id/tv_four_click_title" />
         <ImageView
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/btn_list_2x"
             android:id="@+id/iv_four_click_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="6dp"
-            android:layout_marginEnd="6dp"
-            android:layout_alignParentTop="true"
+            android:layout_marginRight="9dp"
+            android:layout_marginEnd="9dp"
+            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
