--- a/discountsell/src/main/res/layout/four_click_title_activity.xml
+++ b/discountsell/src/main/res/layout/four_click_title_activity.xml
@@ -4,11 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#e2e2e2">
-    <LinearLayout
+    <RelativeLayout
         android:gravity="center"
         android:background="#ff0000"
         android:layout_width="match_parent"
         android:layout_height="40dp">
+        <ImageView
+            android:src="@drawable/back2"
+            android:id="@+id/iv_four_click_title_activity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         <TextView
             android:gravity="center"
             android:textSize="20sp"
@@ -18,8 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </LinearLayout>
-    <GridView
+    </RelativeLayout>
+    <com.handmark.pulltorefresh.library.PullToRefreshGridView
         android:layout_margin="10dp"
         android:id="@+id/gv_four_title_activty"
         android:numColumns="2"
@@ -28,5 +33,5 @@
         android:scrollbarSize="2dp"
         android:scrollbarThumbVertical="@color/colorRed"
         android:scrollbarStyle="outsideOverlay">
-    </GridView>
+    </com.handmark.pulltorefresh.library.PullToRefreshGridView>
 </LinearLayout>
