--- a/discountsell/src/main/res/layout/four_click_activity.xml
+++ b/discountsell/src/main/res/layout/four_click_activity.xml
@@ -1,121 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <RelativeLayout
-        android:background="#ff0000"
+    android:id="@+id/dl_four_click_activity"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
-        <ImageView
-            android:src="@drawable/back2"
-            android:id="@+id/iv_four_click_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:textColor="#fff"
-            android:textSize="23sp"
-            android:text="品牌特卖"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/tv_four_click_title" />
-        <ImageView
-            android:src="@drawable/btn_list_2x"
-            android:id="@+id/iv_four_click_check"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="9dp"
-            android:layout_marginEnd="9dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-    </RelativeLayout>
-      <RadioGroup
-          android:id="@+id/rg_four_click_activity"
-          android:orientation="horizontal"
-          android:gravity="center"
-          android:layout_width="match_parent"
-          android:layout_height="50dp">
-          <RadioButton
-              android:gravity="center"
-              android:button="@null"
-              android:onClick="onClick"
-              android:id="@+id/bt_four_click_recomment"
-              android:text="推荐"
-              android:textColor="@color/selecter_radio_textcolor"
-              android:layout_weight="1"
-              android:background="#fff"
-              android:layout_width="0dp"
-              android:layout_height="match_parent" />
-          <RelativeLayout
-              android:background="#bfbfbf"
-              android:layout_width="2dp"
-              android:layout_height="25dp"></RelativeLayout>
-          <RadioButton
-              android:onClick="onClick"
-              android:gravity="center"
-              android:button="@null"
-              android:id="@+id/bt_four_click_sales"
-              android:text="销量"
-              android:textColor="@color/selecter_radio_textcolor"
-              android:layout_weight="1"
-              android:background="#fff"
-              android:layout_width="0dp"
-              android:layout_height="match_parent" />
-          <RelativeLayout
-              android:background="#bfbfbf"
-              android:layout_width="2dp"
-              android:layout_height="25dp"></RelativeLayout>
-          <RadioButton
-              android:drawableRight="@drawable/ass"
-              android:onClick="onClick"
-              android:gravity="center"
-              android:button="@null"
-              android:id="@+id/bt_four_click_price"
-              android:padding="10dp"
-              android:text="价格"
-              android:textColor="@color/selecter_radio_textcolor"
-              android:layout_weight="1"
-              android:background="#fff"
-              android:layout_width="0dp"
-              android:layout_height="match_parent" />
-          <RelativeLayout
-              android:background="#bfbfbf"
-              android:layout_width="2dp"
-              android:layout_height="25dp"></RelativeLayout>
-          <RadioButton
-              android:onClick="onClick"
-              android:gravity="center"
-              android:button="@null"
-              android:id="@+id/bt_four_click_discount"
-              android:text="折扣"
-              android:textColor="@color/selecter_radio_textcolor"
-              android:layout_weight="1"
-              android:background="#fff"
-              android:layout_width="0dp"
-              android:layout_height="match_parent" />
-          <RelativeLayout
-              android:background="#bfbfbf"
-              android:layout_width="2dp"
-              android:layout_height="25dp"></RelativeLayout>
-          <RadioButton
-              android:onClick="onClick"
-              android:gravity="center"
-              android:button="@null"
-              android:id="@+id/bt_four_click_newest"
-              android:text="最新"
-              android:textColor="@color/selecter_radio_textcolor"
-              android:layout_weight="1"
-              android:background="#fff"
-              android:layout_width="0dp"
-              android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:id="@+id/rl_four_click_activity"
+            android:background="#ff0000"
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+            <ImageView
+                android:onClick="onClicg"
+                android:src="@drawable/back2"
+                android:id="@+id/iv_four_click_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:textColor="#fff"
+                android:textSize="23sp"
+                android:text="品牌特卖"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/tv_four_click_title" />
+            <ImageView
+                android:onClick="onClicg"
+                android:src="@drawable/btn_list_2x"
+                android:id="@+id/iv_four_click_check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="9dp"
+                android:layout_marginEnd="9dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
+        <RadioGroup
+            android:id="@+id/rg_four_click_activity"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+            <RadioButton
+                android:gravity="center"
+                android:button="@null"
+                android:onClick="onClick"
+                android:id="@+id/bt_four_click_recomment"
+                android:text="推荐"
+                android:textColor="@color/selecter_radio_textcolor"
+                android:layout_weight="1"
+                android:background="#fff"
+                android:layout_width="0dp"
+                android:layout_height="match_parent" />
+            <RelativeLayout
+                android:background="#bfbfbf"
+                android:layout_width="2dp"
+                android:layout_height="25dp"></RelativeLayout>
+            <RadioButton
+                android:onClick="onClick"
+                android:gravity="center"
+                android:button="@null"
+                android:id="@+id/bt_four_click_sales"
+                android:text="销量"
+                android:textColor="@color/selecter_radio_textcolor"
+                android:layout_weight="1"
+                android:background="#fff"
+                android:layout_width="0dp"
+                android:layout_height="match_parent" />
+            <RelativeLayout
+                android:background="#bfbfbf"
+                android:layout_width="2dp"
+                android:layout_height="25dp"></RelativeLayout>
+            <RadioButton
+                android:drawableRight="@drawable/ass"
+                android:onClick="onClick"
+                android:gravity="center"
+                android:button="@null"
+                android:id="@+id/bt_four_click_price"
+                android:padding="10dp"
+                android:text="价格"
+                android:textColor="@color/selecter_radio_textcolor"
+                android:layout_weight="1"
+                android:background="#fff"
+                android:layout_width="0dp"
+                android:layout_height="match_parent" />
+            <RelativeLayout
+                android:background="#bfbfbf"
+                android:layout_width="2dp"
+                android:layout_height="25dp"></RelativeLayout>
+            <RadioButton
+                android:onClick="onClick"
+                android:gravity="center"
+                android:button="@null"
+                android:id="@+id/bt_four_click_discount"
+                android:text="折扣"
+                android:textColor="@color/selecter_radio_textcolor"
+                android:layout_weight="1"
+                android:background="#fff"
+                android:layout_width="0dp"
+                android:layout_height="match_parent" />
+            <RelativeLayout
+                android:background="#bfbfbf"
+                android:layout_width="2dp"
+                android:layout_height="25dp"></RelativeLayout>
+            <RadioButton
+                android:onClick="onClick"
+                android:gravity="center"
+                android:button="@null"
+                android:id="@+id/bt_four_click_newest"
+                android:text="最新"
+                android:textColor="@color/selecter_radio_textcolor"
+                android:layout_weight="1"
+                android:background="#fff"
+                android:layout_width="0dp"
+                android:layout_height="match_parent" />
 
-      </RadioGroup>
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_four_click_activity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </android.support.v4.view.ViewPager>
-</LinearLayout>
+        </RadioGroup>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_four_click_activity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </android.support.v4.view.ViewPager>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/ll_four_click_activity"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:orientation="vertical">
+        <ListView
+            android:id="@+id/lv_four_click_activity"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"></ListView>
+
+    </LinearLayout>
+</android.support.v4.widget.DrawerLayout>
