--- a/discountsell/src/main/res/layout/fragment_five.xml
+++ b/discountsell/src/main/res/layout/fragment_five.xml
@@ -1,13 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="androidas.com.discountsell.fragment.FiveFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="1111" />
+   <ImageView
+       android:src="@drawable/xwb"
+       android:layout_width="match_parent"
+       android:layout_height="801dp"
+       android:layout_gravity="center_vertical" />
 
-</FrameLayout>
+</LinearLayout>
