--- a/discountsell/src/main/res/layout/item_sql.xml
+++ b/discountsell/src/main/res/layout/item_sql.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:textSize="25dp"
         android:textStyle="bold"
+        android:textColor="#f95b00"
         android:text="nihao"/>
 </RelativeLayout>
 </LinearLayout>
